...
"viewEditTextInfoHintLastName" = "Smith";
"viewEditTextTitleFirstName" = "First Name";
"viewEditTextTitleLastName" = "Last Name";
"viewSignupContactLabel" = "We require your phone number to coordinate during pickup and delivery";
"viewDatesLoanersOnly" = "Dates with available loaners only";
"viewDealershipCloseToLocation" = "Dealerships close to:";
"viewEditTextInfoHintEmail" = "name@domain.com";
"viewEditTextInfoHintPhoneNumber" = "(555) 555–5555";
"viewEditTextTitleEmail" = "Email Address";
"viewEditTextTitlePhoneNumber" = "Mobile Phone Number";
"viewEditTextTitlePassword" = "Password";
"viewEditTextPhoneDescription" = "We’ll send you a text message to confirm the number";
"viewSignupPasswordLabel" = "Create a password";
...
"viewSettingsSoftwareLicencesTitle" = "Software Licences";
"viewSettingsDistanceUnitHeader" = "Units of distance";
"viewSettingsDistanceUnitTitle" = "Show Distances as Miles";
"viewProfileLocationHeader" = "Pickup/Delivery Locations";
"viewProfileContactHeader" = "Contact Information";
"viewProfileAccountPasswordHeader" = "Account Password";
"viewPhoneVerificationCodeHint" = "0000";
"viewScheduleService" = "Pickup & Delivery";
"viewScheduleServiceVehicleServiceScheduled" = "Scheduled Service";
"viewScheduledSelfDrop" = "Scheduled Self-Drop";
"viewScheduleServiceScheduledLabel" = "View Dealership Location";
"viewScheduleServiceTypeDescription" = "You can schedule pickup (with participating dealerships) through Volvo Valet.\\n\\nTo schedule pickup, first select service type.";
"viewScheduleServiceTypeMilestone" = "Milestone Services";
...
"yesIAmSure" = "Yes, I’m sure";
"no" = "No";
"notNow" = "Not Now";
"ok" = "Ok";
"cancel" = "Cancel";
"loading" = "Loading…";
"next" = "Next";
"newAction" = "New";
"skip" = "Skip";
"edit" = "Edit";
"done" = "Done";
"add" = "Add";
"remove" = "Remove";
"close" = "Close";
"dismiss" = "Dismiss";
"retry" = "Retry";
"dealership" = "Dealership";
...
