...
import FlagPhoneNumber
import libPhoneNumber_iOS

class ConfirmPhoneViewController: StepViewController, FPNTextFieldDelegate {

    // MARK: Layout
    private let phoneNumberTextField = VLVerticalTextField(title: Unlocalized.phoneNumber, placeholder: "(555) 555-5555", isPhoneNumber: true)
    var validPhoneNumber: NBPhoneNumber?
    let phoneUtil = NBPhoneNumberUtil.sharedInstance()
    var countryCode: String?
    
    var isPhoneNumberUpdate = false

...
